# microllama

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  example.source.json  microllama.py  pyproject.toml  serve.py
microllama/: Dockerfile  __init__.py  index.html
static/: index.html
