[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "microllama"
authors = [{name = "Tom Dyson", email = "tom@torchbox.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "langchain", 
    "tiktoken",
    "faiss-cpu",
    "openai",
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",
    "typer"
]

[project.urls]
Home = "https://github.com/tomdyson/microllama"

[project.scripts]
microllama = "microllama:cli_wrapper"